--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} - {% endif %}C++ Samples</title>
+    <title>{% if page.title %}{{ page.title }} - {% endif %}C++ Patterns</title>
     <meta charset="utf-8">
     <meta name="description" content="{{ page.description }}">
     <meta name="viewport" content="width=device-width,user-scalable=no">
@@ -16,8 +16,8 @@
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:creator" content="@sftrabbit">
-    <meta property="og:title" content="{% if page.title %}{{ page.title }} - {% endif %}C++ Samples">
-    <meta property="og:site_name" content="C++ Samples">
+    <meta property="og:title" content="{% if page.title %}{{ page.title }} - {% endif %}C++ Patterns">
+    <meta property="og:site_name" content="C++ Patterns">
     <meta property="og:url" content="{{ site.baseurl }}{{ page.url }}">
     <meta property="og:description" content="{{ page.description }}">
     <meta property="fb:app_id" content="676162015844286">
@@ -27,7 +27,7 @@
       <div class="container">
         <div class="row">
           <div class="column-1">
-            <h1><a href="{{ site.baseurl }}/"><span>C++</span>​Samples</a></h1>
+            <h1><a href="{{ site.baseurl }}/"><span>C++</span>Patterns</a></h1>
           </div>
 {% if page.name == 'index.html' %}
           <div class="column-2 search">
@@ -56,13 +56,13 @@
         <div class="column-2">
           <p>Feel like <b>contributing</b>? This website is generated from a git repository. If you have something to add or have noticed a mistake, please <a href="https://github.com/sftrabbit/CppSamples-Samples">fork the project on GitHub</a>.</p>
           <p><div class="fb-like" data-href="{{ site.baseurl }}/" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div></p>
-          <p><a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ site.baseurl }}/" data-text="Modern and idiomatic C++ code from C++ Samples" data-via="cppsamples" data-dnt="true">Tweet</a></p>
+          <p><a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ site.baseurl }}/" data-text="Modern and idiomatic C++ code from C++ Patterns" data-via="cppsamples" data-dnt="true">Tweet</a></p>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
           <div class="g-plus" data-action="share" data-annotation="bubble" data-href="http://www.cppsamples.com/"></div>
         </div>
         <div class="column-1 offset-1 about">
           <img src="http://josephmansfield.uk/images/logo.svg">
-          <p>C++ Samples created by <a href="http://josephmansfield.uk/">Joseph Mansfield</a></p>
+          <p>C++ Patterns created by <a href="http://josephmansfield.uk/">Joseph Mansfield</a></p>
         </div>
       </div>
     </footer>
