Use Google Fonts via HTTPS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="{{ site.baseurl }}{% if page.url != '/index.html' %}{{ page.url }}{% endif %}">
     <link rel="icon" sizes="16x16" type="image/vnd.microsoft.icon" href="{{ site.baseurl }}/images/icon-16.ico">
     <link rel="icon" sizes="32x32" type="image/vnd.microsoft.icon" href="{{ site.baseurl }}/images/icon-32.ico">
-    <link href="http://fonts.googleapis.com/css?family=Roboto:400italic,100,700italic,700,400|Roboto+Slab|Ubuntu+Mono" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400italic,100,700italic,700,400|Roboto+Slab|Ubuntu+Mono" rel="stylesheet" type="text/css">
     <link href="{{ site.baseurl }}/css/screen.css" rel="stylesheet" type="text/css">
 
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
